# ChangeLog for net-misc/capiisdnmon
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/capiisdnmon/ChangeLog,v 1.10 2011/03/29 11:59:19 angelos Exp $

  29 Mar 2011; Christoph Mende <angelos@gentoo.org> capiisdnmon-0.42-r1.ebuild:
  Fixed slot deps

  09 Mar 2010; Jonathan Callen <abcd@gentoo.org> capiisdnmon-0.42-r1.ebuild:
  QA: When not using an absolute path, you MUST NOT use a file extension
  (.png, .svg, or .xpm) on the icon name for make_desktop_entry

  10 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  capiisdnmon-0.42-r1.ebuild, +files/capiisdnmon-0.42-gcc44.patch:
  Fix building with GCC 4.4+ wrt #274242.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  02 Jul 2006; Chris White <chriswhite@gentoo.org> metadata.xml:
  Japanese metadata.xml translation.  Thanks to Yoshino-san in bug #133928.

  22 Mar 2006; Stefan Schweizer <genstef@gentoo.org>
  capiisdnmon-0.42-r1.ebuild:
  Make it compile with ldap-2.3 and gcc-4.1

  08 Sep 2005; Alin Nastac <mrness@gentoo.org> metadata.xml,
  capiisdnmon-0.42-r1.ebuild:
  Correct description text.

*capiisdnmon-0.42-r1 (18 Aug 2005)

  18 Aug 2005; Stefan Schweizer <genstef@gentoo.org>
  -capiisdnmon-0.42.ebuild, +capiisdnmon-0.42-r1.ebuild:
  Add autogenerated .desktop file, revision bump

  08 Aug 2005; David Holm <dholm@gentoo.org> capiisdnmon-0.42.ebuild:
  Added to ~ppc.

*capiisdnmon-0.42 (06 Aug 2005)

  06 Aug 2005; Stefan Briesenick <sbriesen@gentoo.org>
  +files/capiisdnmon-0.42-capiv3.patch, +metadata.xml,
  +capiisdnmon-0.42.ebuild:
  initial commit.
