@@ -1,16 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX capiisdnmon-0.42-capiv3.patch 776 RMD160 a01f1ce1c87edc389523db2e37d37421359431e3 SHA1 d5bc611076bd750dc00cd28c39fc5fa0e989d70c SHA256 84e4c2917faa0ebf3a96677b8bc7df710b8c56a578e2f0780f4c9a041e4fbe51
-AUX capiisdnmon-0.42-gcc44.patch 839 RMD160 bcfbaa054dba9a7d5c077a1cffd902366b0a196b SHA1 ac92feb1396f093935ed71b4820e785541349b32 SHA256 6a8e6bbf4ec6e4741250a69e3b8528f53fd7110b05ede97f1abd98e704f52e0e
-DIST capiisdnmon-0.42.tar.gz 79945 RMD160 3badf511a7894cd7937484432c3b9157834bcb37 SHA1 7e5c29ca386d9f27479251ca439c92d6c5c98d3b SHA256 c5e5de33fa5d4c2392e603c4c3d376c94e41f916ced360754844bce4a14d04ec
-EBUILD capiisdnmon-0.42-r1.ebuild 1083 RMD160 5a231acc7f84a03cab9d79c8929ca8a42cedbf7b SHA1 9151e7b4a77aa1f1a3561d24e09b57b06cffd1d0 SHA256 e71f041259bfc4d632a156e74458409a995e97d24f0e8af4eb3d1fce49e989e2
-MISC ChangeLog 1649 RMD160 9cb275900921f240b12d96f122530f35b58b4f4f SHA1 3c9548d5391b3f7662dba57b87209749fe551fd7 SHA256 19903cce21792268eb649ccb6057f60e853e7546cc95a2ec48dde6490472bf05
-MISC metadata.xml 367 RMD160 3fe543ac2e6503e26b0e9049841f2452a7a4b2b0 SHA1 ea3481482e90cc55309a86d3e38b13560dfb1cd5 SHA256 6faf518025f2c47d9239251704ba3bde5fec045812afb8fd6440946c052fd90a
+AUX capiisdnmon-0.42-capiv3.patch 776 SHA256 84e4c2917faa0ebf3a96677b8bc7df710b8c56a578e2f0780f4c9a041e4fbe51 SHA512 14de9043dd695fec91ce39713aba2872699df21004411600ebcef386a3ebdd1a2af2ed053c66cca7b893b0bc6d2764344b57001b9615b31943238e783ff4ca9c WHIRLPOOL ccd1e02201dae47b12aa7bb11a40f042934720d1d99f53de54e9337034073cafae68faa95e8a931bcd32f337517f298737725411fd3cfda1ee2cc1edcb6de8f2
+AUX capiisdnmon-0.42-gcc44.patch 839 SHA256 6a8e6bbf4ec6e4741250a69e3b8528f53fd7110b05ede97f1abd98e704f52e0e SHA512 b6d15c0b8cd10998f5f64bed901b2df833001ef18e97f870520fe5e20255118b3cbd97e35c50ec1383656f2433bfc8b4a2cc2bcd8f868f0fa956cff41cf02aea WHIRLPOOL c6b793121c9869aa9116c0884dfa50c1edc1ecf66442c0d9a675324626b94b5273ff729531b7953f47d0d018a145281afba7709fe7f1aa9ffea32bfa4f2b6625
+DIST capiisdnmon-0.42.tar.gz 79945 SHA256 c5e5de33fa5d4c2392e603c4c3d376c94e41f916ced360754844bce4a14d04ec SHA512 61a87aff01835969bb842c603609c1e3a95c4ad62de36bb96c992217d806ea8a48babd47c3371b5ab288d8f710b677c283daf1130adbbfba37c4b088b9bbd217 WHIRLPOOL 4ad59dd72f1abbd0bac1974520be30e6a8c0cc322857131b4770985cc963be57a27568d7abd5dca123eb16627ea011f08ba7925721044fa6e00bc168b69e0c6c
+EBUILD capiisdnmon-0.42-r2.ebuild 1039 SHA256 cafb042e424b6e56f1d0b690a2f1f3876c9811c97d2a337efae1e1fac5e36e55 SHA512 2a530b52fe9d63222666d6851c94410f53b9ce566bdd36c7d8303c18f3b04ca62aaed247f50e81aca1ab338e17544ac9f5d67b68e3f1403b87e1c87f70b8bf9c WHIRLPOOL f6a2d55b53e676156bd4e79f8976b027cb9337a3ad302656949ff8d87880eb48b4a0bf6f42c8a5e684cdf2a569566850ea200af23b36079a075273b48637b6b4
+MISC ChangeLog 1915 SHA256 de079fd623eb60fae2d9d6a3beeda724b5871e73eeefc473bf1ca3ce33a53241 SHA512 4b354290c79a49c0aa42b8b0fc88e59b9904fc6d24ba668379b61c280960d2a2fb6a8baa099fa381df1d9be1e946358c9a28e7d13c5e59289506f71e61c231af WHIRLPOOL f7f7287531eea162ca06e467067b1548b989322e1d6d95fe0a88c08bcb6718e944138cc19dd789cf4846329a100888dfcb1660346a31ab0fc99292f933fb6496
+MISC metadata.xml 367 SHA256 6faf518025f2c47d9239251704ba3bde5fec045812afb8fd6440946c052fd90a SHA512 fc59e2639422eefe07cf5bc4a9790c02385d9528ec73d9f3c61dbfb31f598be77385526d70137490bca5253b6bf500c8be503d6fbf6f1910e976346234cce483 WHIRLPOOL de3cdf6d2585532b1cc16d37660f08e8d5ea68af07f7ee9a69c9c4d73c36816ed48d507ec891d7d81e2bea9fc38daa0ea6162f0a33778e701c805a30abb20f9d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAk2RyZwACgkQmWq1bYTyC0OuVAD/SnEIXYHaqj0/0kfEWf0ODBIq
-omfXZUguy10myCjJsLkA/Rkop4elsrk9TyEupm4X5Ali6OuQNzosVH3ses7WkmcE
-=Poy6
+iQEcBAEBCAAGBQJU+AqNAAoJECo/aRed9267GKAIAJ+CfCKutAViQDoYCHmaVSC0
+0fyTRJGHuE42vPexYa0nAKvn8iY6xcxbgOb8NRlzGNDDycd580fmLqJFRGkpkeoX
+Mfi/c9CaRtqW4U7AAC774/11/6gxWNIPhRgyleri8zDoCHFpcrIEGe5iq6fsjzQV
+7WH8LHm93Yg8kFEzMFujRIgSRe91/Abjl3wNr59wNEUwNcNgYCzPECuxttJ7BBJn
+y0+91shrRwMxxJkJjtEHdqpUh37E9bTOfp1GiJhUljjYeVphPaJiTmcJt4Undp2p
+QDOoKRJ5v2Wu22w9IwvVhltme7i6wttIVuTnM2J1mKM9xKYLUy9qYrnPpY5n5Wo=
+=qQ/C
 -----END PGP SIGNATURE-----
